--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Plastijin</title>
     <style>
         body {
-            background-image: url('src/images/nut.jpg');
+            background-image: url('nut.jpg');
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
