--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastijin</title>
-    <style>
-        body {
-            background-image: url('nut.jpg');
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #bdbdbd;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+    <title>Welcome!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-         <h1>～単なるウェブサイト～</h1>
-        <p>建設中！</p>
+        <header>
+            <h1>Uhhh...</h1>
+        </header>
+        <main class="content">
+            <img src="maintenance.gif" alt="Site Under Maintenance Image">
+            <h2>We'll be here soon!</h2>
+            <p>Website is currently being made. Thank you for your patience.</p>
+        </main>
     </div>
 </body>
-</html>
