--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <main class="content">
             <img src="maintenance.gif" alt="Site Under Maintenance Image">
             <h2>We'll be here soon!</h2>
-            <p>Website is currently being made. Thank you for your patience.</p>
+            <p>Website is under maintenance. Thank you for your patience.</p>
         </main>
     </div>
 </body>
+
