--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome!</title>
+    <title>フランス・フェルディナン・フォンディ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Uhhh...</h1>
+            <h1>えーっと…</h1>
         </header>
         <main class="content">
             <img src="maintenance.gif" alt="Site Under Maintenance Image">
-            <h2>We'll be here soon!</h2>
-            <p>Website is under maintenance. Thank you for your patience.</p>
+            <h2>すぐ戻るよ！</h2>
+            <p>ただいまメンテ中です(；・∀・) ごめんね、ちょっと待ってね！</p>
         </main>
     </div>
 </body>
+
 
