--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>フランス・フェルディナン・フォンディ</title>
+    <title>フフフ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,5 +18,6 @@
         </main>
     </div>
 </body>
+
 
 
